# frame2d-analysis-engine

./: CMakeLists.txt  README.md  graphicsview.cpp  graphicsview.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
engine/: engine.cpp  engine.h
engine/model/: Load.h  Node.h  member.cpp  member.h
engine/solver/: frame_solver.cpp  frame_solver.h
ui/dialogs/: loaddialog.cpp  loaddialog.h  loaddialog.ui
